syntax = "proto3";
package starnamed.x.escrow.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/iov-one/starnamed/x/escrow/types";
option (gogoproto.goproto_getters_all) = false;


// Escrow defines the struct of an escrow
message TestObject {
    uint64 id = 1;
    bytes owner = 2 [ (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}
